# factorio_with_physics

./: .gitignore  .gitmodules  Cargo.toml  temperature_calculation.txt
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
client/src/server/: mod.rs  s_loop.rs  s_shared.rs
client/src/state/: mod.rs  text_input.rs
client/src/state/layout/: login.rs  mod.rs
client/src/window/: font.rs  mod.rs
libs/aabb-quad-tree/: .rustfmt.toml  Cargo.toml
libs/aabb-quad-tree/benches/: bench.rs
libs/aabb-quad-tree/src/: bounds.rs  lib.rs  node.rs
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
server/: Cargo.toml  universe.json
server/src/: main.rs
server/src/universe/: mod.rs
shared/: Cargo.toml
shared/src/: ids.rs  lib.rs
shared/src/to_client/: mod.rs
shared/src/to_server/: mod.rs
src/: _units.rs  assets.rs  macros.rs  main.rs
src/component/: heat.rs  mod.rs
src/entity/: entity_bitvec.rs  entity_map.rs  entity_vec.rs  hitbox.rs  item_on_ground.rs  miner.rs  mod.rs
src/entity/properties/: chunk.rs  entity_render.rs  hitbox.rs  mod.rs  position.rs  tile_grid.rs
src/grid_storage/: ext.rs  iterator.rs  mod.rs  position.rs
src/material/: mod.rs
src/sys/: color.rs  event.rs  mod.rs
src/system/: heat.rs  mod.rs
src/units/: combinations.rs  mod.rs  si.rs
src/utils/: mod.rs  option_ext.rs
src/world/: chunk.rs  coord.rs  mod.rs  resource.rs
