[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "factorio_with_physics"
version = "0.1.0"

[dependencies]
noisy_float = { path = "libs/noisy_float-rs" }
itertools = "0.8"
macros = { path = "libs/macros" }
rand = "0.7"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies.specs]
version = "0.15"
features = ["nightly"]
