[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "factorio_with_physics"
version = "0.1.0"

[dependencies]
rand = "0.7"
vek = "0.12"
bitvec = "0.17"
noisy_float = "0.1"

[dependencies.tetra]
version = "0.5"
features = ["sdl2_bundled", "sdl2_static_link"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
