[package]
name = "client"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
parking_lot = "0.10"
lazy_static = "1.4"

[dependencies.sdl2]
version = "0.32"
features = ["gfx", "ttf", "mixer", "image"]
