[package]
name = "server"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }
serde_json = "1.0"

