[package]
name = "aabb-quad-tree"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = {version ="0.5", optional = true}

[dependencies.smallvec]
version = "1.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "bench"
harness = false

[features]
default = ["ggez"]

[[bin]]
name = "visualiser"
path = "bin/visualiser.rs"
test = false
bench = false
required-features = ["ggez"]

[lib]
bench = false